# web-todo-rust

./: Cargo.toml
src/: main.rs
src/desktop/: ui.rs
src/resources/: embedded.rs  mod.rs
src/web/: api.rs  mod.rs  routes.rs  static_files.rs  templates.rs
static/components/: todo-list.html
static/public/: index.html
